# website_warp

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  peon.sh  rollup.config.js  start.sh  styleMain.css
.github/workflows/: deploy_check.yml
docker_scripts/: dev_start.sh
dockerfiles/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
dockerfiles/dev/: Dockerfile
dockerfiles/prod/: Dockerfile
log/: readme.md
public/css/: animated_bg.css  bootstrap_min.css  main.css  styleMain.css
scss/: _variables.scss
src/: common.rs  error.rs  main.rs  routes.rs  snippets.rs  tera.rs
src/handlers/: error.rs  homepage.rs  mod.rs  portfolio.rs  static_page.rs  tera_reload.rs  tera_test.rs
templates/: announcer.html  error.html  footer.html  index.html  inttech.html  main.html  nav.html  portfolio.html  profdev.html
templates/pd_includes/: adventures.html  challenges.html  important_lessons.html  strengths.html  tips.html
