[package]
name = "website_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For cargo-chef to know what to build? 
[[bin]]
name = "website_warp"
path = "src/main.rs" 

[features]
debug = []

[dependencies]
tokio = {version = "1.26.0", features = ["full"] }
warp = "0.3.3"
tera = "1"
lazy_static = "1.4.0"
string-builder = "0.2.0"
lets-encrypt-warp = "0.3.0"
clap = { version = "4.1.8", features = ["derive"] }
